# aiidalab-qe-vibroscopy

./: .pre-commit-config.yaml  LICENSE.txt  README.md  phonopy_install.py  phonopy_setup.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
aiidalab_qe_vibroscopy/: __init__.py  codes.py
aiidalab_qe_vibroscopy/app/: __init__.py  codes.py  result.py  settings.py  workchain.py
aiidalab_qe_vibroscopy/dielectric/: __init__.py  settings.py  workchain.py
aiidalab_qe_vibroscopy/harmonic/: __init__.py  result.py  settings.py  workchain.py
aiidalab_qe_vibroscopy/phonons/: __init__.py  result.py  settings.py  workchain.py
aiidalab_qe_vibroscopy/raman/: __init__.py  result.py  settings.py  workchain.py
aiidalab_qe_vibroscopy/utils/dielectric/: __init__.py  settings.py  workchain.py
aiidalab_qe_vibroscopy/utils/euphonic/: __init__.py  bands_pdos.py  euphonic_powder_widgets.py  euphonic_q_planes_widgets.py  euphonic_widgets.py  intensity_maps.py
aiidalab_qe_vibroscopy/utils/harmonic/: __init__.py  result.py  settings.py  workchain.py
aiidalab_qe_vibroscopy/utils/phonons/: __init__.py  result.py  settings.py  workchain.py
aiidalab_qe_vibroscopy/utils/raman/: __init__.py  result.py  settings.py  workchain.py
aiidalab_qe_vibroscopy/workflows/: __init__.py  result.py  settings.py  vibroworkchain.py  workchain.py
src/aiidalab_qe_vibroscopy/: __init__.py  __main__.py
src/aiidalab_qe_vibroscopy/app/: __init__.py  code.py  model.py  result.py  settings.py  workchain.py
src/aiidalab_qe_vibroscopy/app/guides/: 0_Phonons, thermal properties, inelastic neutron scattering.html  0_phonons+neutrons.html  1_IR and Raman spectroscopy, dielectric properties.html  1_Raman+IR+dielectric.html  2_Full.html  2_phonons+Raman+IR+dielectric+neutrons.html
src/aiidalab_qe_vibroscopy/app/result/: __init__.py  model.py  result.py
src/aiidalab_qe_vibroscopy/app/widgets/: dielectricmodel.py  dielectricwidget.py  euphonicmodel.py  euphonicwidget.py  ir_ramanmodel.py  ir_ramanwidget.py  phononmodel.py  phononwidget.py  ramanmodel.py  ramanwidget.py  structurefactorwidget.py  utils_widgets.py
src/aiidalab_qe_vibroscopy/app/widgets/euphonic/: model.py  powder_full_model.py  powder_full_widget.py  single_crystal_model.py  single_crystal_widget.py  widget.py
src/aiidalab_qe_vibroscopy/utils/dielectric/: result.py  settings.py  workchain.py
src/aiidalab_qe_vibroscopy/utils/euphonic/: Detached_app.ipynb  __init__.py  euphonic_base_widgets.py  euphonic_powder_widgets.py  euphonic_q_planes_widgets.py  euphonic_single_crystal_widgets.py  intensity_maps.py  structurefactorwidget.py
src/aiidalab_qe_vibroscopy/utils/euphonic/base_widgets/: euphonic_base_widgets.py
src/aiidalab_qe_vibroscopy/utils/euphonic/data/: bands_pdos.py  export_vibronic_to_euphonic.py  parameters.py  phonopy_interface.py  structure_factors.py
src/aiidalab_qe_vibroscopy/utils/euphonic/data_manipulation/: bands_pdos.py  intensity_maps.py
src/aiidalab_qe_vibroscopy/utils/euphonic/detached_app/: Detached_app.ipynb  uploadwidgets.py
src/aiidalab_qe_vibroscopy/utils/harmonic/: result.py  workchain.py
src/aiidalab_qe_vibroscopy/utils/phonons/: __init__.py  result.py  settings.py  workchain.py
src/aiidalab_qe_vibroscopy/utils/raman/: result.py
src/aiidalab_qe_vibroscopy/workflows/: vibroworkchain.py
tests/: conftest.py  test_settings.py  test_submit.py
tests/test_submit/: test_create_builder_default.yml
(+8 files in other folders)
