[build-system]
requires = ["flit_core >= 3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aiidalab-qe-vibroscopy"
dynamic = ["description", "version"]
authors = [
    {name = "Miki Bonacci", email = "miki.bonacci@psi.ch"},
    {name = "Andres Ortega Guerrero", email = "andres.ortega-guerrero@empa.ch"}
]
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 4 Beta",
    "Framework :: AiiDAlab QE",
]
keywords = ["aiidalab", "plugin"]
requires-python = ">=3.8"
dependencies = [
    "aiida-vibroscopy>=1.0.2",
    "aiida-phonopy>=1.1.3",
    "phonopy",
    "pre-commit",
]

[project.scripts]
phonopy_install = "phonopy_install:install_phonopy"

[project.urls]
Source = "https://github.com/mikibonacci/aiidalab-qe-vibroscopy"


[project.entry-points.'aiida.workflows']
"vibroscopy_app.vibro" = "aiidalab_qe_vibroscopy.workflows.vibroworkchain:VibroWorkChain"

[project.entry-points.'aiidalab_qe.properties']
"vibronic" = "aiidalab_qe_vibroscopy.workflows:property"
