[build-system]
requires = ["flit_core >= 3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aiidalab-qe-vibroscopy"
description="AiiDAlab QE plugin for vibrational spectoscopies."
version = "1.0.1"
authors = [
    {name = "Miki Bonacci", email = "miki.bonacci@psi.ch"},
    {name = "Andres Ortega Guerrero", email = "andres.ortega-guerrero@empa.ch"}
]
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
]
keywords = ["aiidalab", "plugin"]
requires-python = ">=3.8"
dependencies = [
    "aiida-vibroscopy>=1.0.2",
    "aiida-phonopy>=1.1.3",
    "phonopy",
    #"euphonic==1.1.0",
    "pre-commit",
    "euphonic",
    "kaleido",
]

[project.urls]
Source = "https://github.com/mikibonacci/aiidalab-qe-vibroscopy"

[project.entry-points.'aiida.workflows']
"vibroscopy_app.vibro" = "aiidalab_qe_vibroscopy.workflows.vibroworkchain:VibroWorkChain"

[project.entry-points.'aiidalab_qe.properties']
"vibronic" = "aiidalab_qe_vibroscopy.app:property"

[project.scripts]
"aiidalab-qe-vibroscopy" = "aiidalab_qe_vibroscopy.__main__:cli"